--- a/DSPT6_311_Matt_Haley.ipynb
+++ b/DSPT6_311_Matt_Haley.ipynb
@@ -6,7 +6,7 @@
       "name": "DSPT6_311_Matt_Haley.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOy2pufNWlbOn8SSYzjSAGz",
+      "authorship_tag": "ABX9TyN//yBkiTdGbQvO+T2TGyM/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,9 +32,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 102
         },
-        "outputId": "e9d328b4-4d1d-48e2-8d4a-1aa24ebb0ac5"
+        "outputId": "acd78b53-3f8e-4e09-f185-4611e51dae00"
       },
       "source": [
         "import pandas as pd\n",
@@ -42,7 +42,7 @@
         "from tabulate import tabulate\n",
         "from sklearn.model_selection import train_test_split\n",
         "import math\n",
-        "! pip install -i https://test.pypi.org/simple/ lambdata-dspt6-MattHaley==0.0.3"
+        "! pip install -i https://test.pypi.org/simple/ lambdata-dspt6-MattHaley==0.0.6"
       ],
       "execution_count": 1,
       "outputs": [
@@ -50,7 +50,10 @@
           "output_type": "stream",
           "text": [
             "Looking in indexes: https://test.pypi.org/simple/\n",
-            "Requirement already satisfied: lambdata-dspt6-MattHaley==0.0.3 in /usr/local/lib/python3.6/dist-packages (0.0.3)\n"
+            "Collecting lambdata-dspt6-MattHaley==0.0.6\n",
+            "  Downloading https://test-files.pythonhosted.org/packages/69/80/1ad0a8c8063cf88f2985b9b33c26d59ed592d5d64fb629ce8e29092b1a1c/lambdata_dspt6_MattHaley-0.0.6-py3-none-any.whl\n",
+            "Installing collected packages: lambdata-dspt6-MattHaley\n",
+            "Successfully installed lambdata-dspt6-MattHaley-0.0.6\n"
           ],
           "name": "stdout"
         }
@@ -93,7 +96,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "fb6005a8-1638-41a9-cd63-dc668a5c3532"
+        "outputId": "b45b2b62-d457-4278-d036-798a235eb271"
       },
       "source": [
         "df.head()"
@@ -254,7 +257,7 @@
         "colab": {}
       },
       "source": [
-        "from my_lambdata.ds_utilities import has_null, train_val_test"
+        "from my_lambdata.ds_utilities import DfHelper"
       ],
       "execution_count": 5,
       "outputs": []
@@ -262,18 +265,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R4TeGJNglUc2",
+        "id": "jD_Oe8qpFSod",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dfhelp = DfHelper(df)\n"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zksKsCH7Gjvk",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 323
         },
-        "outputId": "05eae040-91da-4c12-d624-f0e55e5a3814"
+        "outputId": "1f2f3d2f-f36a-42c9-b85e-311f846751bc"
       },
       "source": [
-        "has_null(df)"
+        "dfhelp.has_null()"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,51 +324,51 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JTSGEgwwlb79",
+        "id": "R4TeGJNglUc2",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "30698017-70dc-47ca-8397-239f49300236"
+        "outputId": "6663cb01-1854-45ab-be64-112fcebb5bd5"
       },
       "source": [
-        "print(has_null.__doc__)"
+        "print(dfhelp.has_null.__doc__)"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             " has_null:\n",
             "\n",
-            "        Takes in a dataframe (df) and returns a value of\n",
-            "        True if the dataframe has null values or False if\n",
-            "        the dataframe does not containe null values.\n",
+            "              Takes in a dataframe (df) and returns a value of\n",
+            "              True if the dataframe has null values or False if\n",
+            "              the dataframe does not containe null values.\n",
             "\n",
-            "        By default, this also prints a table showing which\n",
-            "        features contain null values as well as how many null\n",
-            "        values they contain. This cant be disabled by passing\n",
-            "        in a False value for details.\n",
+            "              By default, this also prints a table showing which\n",
+            "              features contain null values as well as how many null\n",
+            "              values they contain. This cant be disabled by passing\n",
+            "              in a False value for details.\n",
             "\n",
-            "        -----------\n",
-            "        Parameters:\n",
-            "        -----------\n",
+            "              -----------\n",
+            "              Parameters:\n",
+            "              -----------\n",
             "\n",
-            "            df (pd.DataFrame): A DataFrame that will be checked for\n",
-            "                               null values.\n",
-            "            \n",
-            "            details (boolean): True or False, will determine whether\n",
-            "                               or not the detailed table will be\n",
-            "                               displayed.\n",
-            "  \n"
+            "                  df (pd.DataFrame): A DataFrame that will be checked for\n",
+            "                                    null values.\n",
+            "\n",
+            "                  details (boolean): True or False, will determine whether\n",
+            "                                    or not the detailed table will be\n",
+            "                                    displayed.\n",
+            "        \n"
           ],
           "name": "stdout"
         }
@@ -367,10 +383,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "432505da-e12f-4f99-d786-a63f11de2454"
+        "outputId": "193fcce0-776b-4d65-d8ad-6a1cda843404"
       },
       "source": [
-        "train, val, test = train_val_test(df)\n",
+        "train, val, test = dfhelp.train_val_test()\n",
         "print(train.shape)\n",
         "print(test.shape)\n",
         "print(val.shape)"
@@ -395,12 +411,12 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 391
         },
-        "outputId": "16081311-9443-45d6-d54f-992062c9f9b4"
+        "outputId": "5ac27483-aed9-4033-d6ba-0b83a42f50b3"
       },
       "source": [
-        "print(train_val_test.__doc__)"
+        "print(dfhelp.train_val_test.__doc__)"
       ],
       "execution_count": 10,
       "outputs": [
@@ -409,25 +425,26 @@
           "text": [
             "train_val_test:\n",
             "\n",
-            "        This function splits a dataframe into train, validation\n",
-            "        and test sets.  By default it splits the dataframe 70%/15%/15%\n",
-            "        into train, validation, and test respectively\n",
+            "              This function splits a dataframe into train, validation\n",
+            "              and test sets.  By default it splits the dataframe 70%/15%/15%\n",
+            "              into train, validation, and test respectively\n",
             "\n",
-            "        ----------\n",
-            "        Parameters\n",
-            "        ----------\n",
+            "              ----------\n",
+            "              Parameters\n",
+            "              ----------\n",
             "\n",
-            "          df (pd.DataFrame): a dataframe to be split\n",
+            "                df (pd.DataFrame): a dataframe to be split\n",
             "\n",
-            "          train_size (float): float between 0 and 1 that will determine the\n",
-            "                              percentage of the original dataframe that will\n",
-            "                              be used to make the train set.\n",
+            "                train_size (float): float between 0 and 1 that will determine\n",
+            "                                    the percentage of the original dataframe\n",
+            "                                    that will be used to make the train set.\n",
             "\n",
-            "          val_size (float): float between 0 and 1 that will determine the\n",
-            "                            percentage of the remaining dataframe that will\n",
-            "                            be used to make the validation set. The remaining\n",
-            "                            percentage will be used to make the test set.\n",
-            "  \n"
+            "                val_size (float): float between 0 and 1 that will determine\n",
+            "                                  the percentage of the remaining dataframe\n",
+            "                                  that will be used to make the validation\n",
+            "                                  set. The remaining percentage will be used\n",
+            "                                  to make the test set.\n",
+            "        \n"
           ],
           "name": "stdout"
         }
